server/networking/iptables_exmaple
# Generated by iptables-save v1.4.7 on Fri Mar 14 09:33:17 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:132]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -i eth0 -j ACCEPT 
-A INPUT -s 131.215.115.0/24 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 131.215.115.0/24 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 193.205.0.0/16 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 193.205.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 172.31.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 172.31.0.0/16 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 128.230.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 128.230.0.0/16 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 128.230.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 129.89.57.0/24 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEEPT
-A INPUT -s 129.89.61.0/24 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEEPT
-A INPUT -s 10.20.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -s 10.20.0.0/16 -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT 
-A INPUT -s 10.20.0.0/16 -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -p icmp -j ACCEPT 
-A FORWARD -i lo -j ACCEPT 
-A FORWARD -i eth0 -j ACCEPT 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Fri Mar 14 09:33:17 2014
